--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 html, body {
-
     font-family: 'Press Start 2P', monospace;
+}
+html {
+    height: 100%;
+    background-image: url('assets/Flat-Art.webp');
 }
 
 #game {
-    width: 790px;
+    width: 750px;
     height: 250px;
     color: black;
     /* background-color: skyblue; */
@@ -14,8 +17,16 @@ html, body {
     background-image: url('assets/bg.png');
     background-size: contain;
     background-repeat: no-repeat;
-    border: #0f0c29 solid 12px;
     border-radius: 10px;
+    border-color: #00f6ff;
+    box-shadow:
+        0 0 8px #00f6ff,
+        0 0 16px #00f6ff,
+        0 0 32px #00f6ff,
+        0 0 64px #00f6ff;
+
+    margin-top: 300px;
+    margin-left: 350px;
 }
 
 #player {
@@ -29,6 +40,7 @@ html, body {
     background-repeat: no-repeat;
     border: #ccc solid;
     border-style: dashed;
+    border-radius: 10px;
 }
 
 .character {
@@ -75,6 +87,7 @@ html, body {
     color: white;
     text-align: center;
     border-radius: 10px;
+    z-index: 20;
 }
 #game-over-text {
     font-size: 20px;
@@ -210,4 +223,64 @@ html, body {
 
 #sound-btn:hover {
     transform: scale(1.2);
+}
+
+/* Ajoute à style.css */
+#drop-zone {
+    width: 320px;
+    height: 120px;
+    border: 2px dashed #fff;
+    border-radius: 10px;
+    margin: 20px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-family: 'Press Start 2P', monospace;
+    background: rgba(0,0,0,0.2);
+    padding-left: 50px;
+}
+#drop-zone.selected {
+    border-color: #28a745;
+    background: rgba(40,167,69,0.2);
+}
+#drop-character {
+    width: 80px;
+    height: 80px;
+    margin-left: 20px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#stats {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: white;
+    font-family: 'Press Start 2P', monospace;
+    font-size: 20px;
+}
+
+/* Css des plateformes */
+.plateforme {
+    width: 120px;
+    height: 20px;
+    background: #b8b8b8;
+    border: 2px solid #444;
+    border-radius: 8px;
+    position: absolute;
+    /* positionné dynamiquement en JS */
+    z-index: 2;
+    box-shadow: 0 0 8px #00f6ff, 0 0 16px #00f6ff;
+    transition: background 0.2s;
+}
+.plateforme.destructible {
+    background: #ffb347;
+    border-color: #ff8800;
+}
+.plateforme.destroyed {
+    background: transparent;
+    border: none;
+    box-shadow: none;
 }
